feature: create login page

--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -7,6 +7,5 @@
   "trailingComma": "all",
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "proseWrap": "always",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "proseWrap": "always"
 }
