--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -5,10 +5,9 @@
   },
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "overrides": [],
-  "files": ["*.ts"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["tsconfig.json"],
+    "project": ["./server/tsconfig.json"],
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
