--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -3,14 +3,13 @@
     "node": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": ["plugin:@typescript-eslint/recommended", "prettier"],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["./server/tsconfig.json"],
-    "ecmaVersion": "latest",
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "plugins": ["prettier"],
+  "rules": { "prettier/prettier": "error" }
 }
