--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "nodemon - exec 'ts-node' ./src/server.ts",
     "start": "ts-node ./src/server.ts",
-    "lint": "eslint . - ext .ts",
-    "lint:fix": "eslint --fix - ext .ts",
+    "lint": "eslint src/**/*.ts",
+    "format": "eslint src/**/*.ts --fix",
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
