--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -1,15 +1,21 @@
 {
   "env": {
-    "node": true,
+    "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:@typescript-eslint/recommended", "prettier"],
-  "overrides": [],
+  "root": true,
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
+    "project": "./server/tsconfig.json"
   },
-  "plugins": ["prettier"],
-  "rules": { "prettier/prettier": "error" }
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+  },
+  "plugins": ["@typescript-eslint"]
 }
