--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,10 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon - exec 'ts-node' ./src/server.ts",
-    "start": "ts-node ./src/server.ts",
     "lint": "eslint src/**/*.ts",
     "format": "eslint --fix src/**/*.ts",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
